# desomi

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Character.cpp.7892A1FD4B24989E.idx  Character.hpp.0DE89733D16E9D0E.idx  CharacterManager.cpp.1943971DF31AA9EF.idx  CharacterManager.hpp.5E16B9A231FCB3AB.idx  EventHandler.cpp.6217838589FB03EB.idx  EventHandler.hpp.062D72E11951326D.idx  MainWidget.cpp.328DBF95FE951CC8.idx  MainWidget.hpp.29DD6C024240A1CF.idx  Resource.cpp.4B684D4BF3362DF4.idx  Resource.hpp.46DBFF9B10C59477.idx  init.cpp.1565A82474AE9C48.idx  main.cpp.D6F50374CAD2A319.idx
Characters/: Draggable.cpp  Draggable.hpp
Core/Character/: Character.cpp  Character.hpp  CharacterManager.cpp  CharacterManager.hpp
Core/Events/: EventHandler.cpp  EventHandler.hpp
Core/Resource/: Resource.cpp  Resource.hpp
Core/Widget/: MainWidget.cpp  MainWidget.hpp
Core/error/: error.hpp
Core/event/: handler.hpp
Core/object/: element.hpp
Core/resource/: manager.hpp
Core/utils/: class_modify.hpp  deleter.hpp
Core/window/: window.hpp
Init/: Init.cpp  InitComstruct.cpp  init.hpp
OldCore/Character/: Character.hpp  CharacterManager.cpp  CharacterManager.hpp
OldCore/Events/: EventHandler.cpp  EventHandler.hpp
OldCore/Resource/: Resource.hpp
OldCore/Widget/: MainWidget.cpp
desomi/core/: CMakeLists.txt
desomi/core/node/: node.hpp
desomi/core/node/interface/: node.hpp
desomi/core/node/src/: rect_node.cc  root.cc
desomi/core/node/templates/: rect_node.hpp  root.hpp
desomi/core/plugins/: manager.hpp
desomi/core/plugins/api/: plugin.hpp
desomi/core/plugins/interfaces/: plugin.hpp
desomi/core/plugins/src/: manager.cc  vsync.cc
desomi/core/plugins/templates/: manager.hpp  vsync.hpp
desomi/core/renderer/api/: sdl_api.hpp
desomi/core/renderer/factory/: renderer.hpp
desomi/core/renderer/interfaces/: render_api.hpp  renderer.hpp
desomi/core/renderer/src/: bfs.cc  sdl_api.cc
desomi/core/renderer/template/: bfs.hpp
desomi/core/src/: node.cpp  renderer.cpp  utils.cpp  window.cpp
desomi/core/utils/: color.hpp  create.hpp  rect.hpp  timer.hpp
desomi/core/utils/src/: utils.cpp
desomi/core/window/: renderer.hpp  window.hpp
desomi/core/window/src/: window.cpp
domi/core/: CMakeLists.txt
domi/core/include/enode/: node_type.hpp
domi/core/src/: enode.cpp
